--- a/events/templates/events/admin_approval.html
+++ b/events/templates/events/admin_approval.html
@@ -14,7 +14,7 @@
   </div>
   <div class="card-body">
     <p class="card-text">Job Count: {{event_count}}</p>
-    <p class="card-text">Task Count: {{venue_count}}</p>
+    <p class="card-text">Job Count: {{venue_count}}</p>
     <p class="card-text">User Count: {{user_count}}</p>
     
   </div>
@@ -53,7 +53,7 @@
   <thead>
     <tr>
       <th scope="col">Job Name</th>
-      <th scope="col">Aproved</th>
+      <th scope="col">Approved</th>
     </tr>
   </thead>
   <tbody>
