--- a/members/templates/authenticate/login.html
+++ b/members/templates/authenticate/login.html
@@ -2,32 +2,27 @@
 
 {% block content %}
 	
-	<h1>Login</h1>
+<h1>Login</h1>
 <br/>
 
+<form action="" method="POST">
+	{% csrf_token %}
+	
+	<div class="mb-3">
+		<label for="username" class="form-label">Username</label>
+		<input type="text" class="form-control" id="username" name="username" required>
+	</div>
 
-		<form action="" method=POST>
-			{% csrf_token %}
+	<div class="mb-3">
+		<label for="password" class="form-label">Password</label>
+		<input type="password" class="form-control" id="password" name="password" required>
+	</div>
 
-		<form>
-  <div class="mb-3">
-    <label for="exampleInputEmail1" class="form-label">Username</label>
-    <input type="text" class="form-control" name="username" aria-describedby="emailHelp">
-    
-  </div>
-  <div class="mb-3">
-    <label for="exampleInputPassword1" class="form-label">Password</label>
-    <input type="password" class="form-control" name="password">
-  </div>
-  
+	<input type="submit" value="Login" class="btn btn-secondary">
 
+	<a href="{% url 'register_user' %}" class="btn btn-outline-primary ms-2">Register</a>
+</form>
 
-			
+<br/><br/>
 
-			<input type="submit" value="Submit" class="btn btn-secondary">
-
-		</form>
-		
-
-<br/><br/>	
 {% endblock %}
