--- a/events/templates/events/my_events.html
+++ b/events/templates/events/my_events.html
@@ -12,15 +12,15 @@
     {{ event }}
   </div>
   <div class="card-body">
-    <h5 class="card-title">Venue: {{ event.venue }}</h5>
+    <h5 class="card-title">Job: {{ event.venue }}</h5>
     <p class="card-text">
     	<ul>
 <li>Date: {{ event.event_date }}</li>
 
-<li>Venue Website: {{ event.venue.web }}</li>
+<li>Job location: {{ event.venue.web }}</li>
 <li>Manager: {{ event.manager }}</li>
 <li>Description: {{ event.description }}</li>
-	<li>Attendees:<br/>
+	<li>Employees:<br/>
 	{% for user in event.attendees.all %}
 {{ user }}<br/>
 	{% endfor %}
