--- a/events/templates/events/show_venue.html
+++ b/events/templates/events/show_venue.html
@@ -5,7 +5,7 @@
 
 <div class="card">
   <div class="card-header">
-    Venue
+    Job
   </div>
   <div class="card-body">
     <h5 class="card-title">{{ venue }}</h5>
@@ -31,14 +31,14 @@
 
     </p>
     <br/>
-    <h3>Events At This Venue...</h3>
+    <h3>Tasks At This Job...</h3>
     {% if events %}
 {% for event in events %}
  <a href="{% url 'show-event' event.id %}">{{ event}}</a><br/>
 {% endfor %}
 <br/>
 {% else %}
-No Events Scheduled At This Time.
+No Jobs Scheduled At This Time.
 {% endif %}
   </div>
   <br/><br/>
