--- a/events/templates/events/update_venue.html
+++ b/events/templates/events/update_venue.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 {% if user.is_authenticated %}
-	<h1>Update Venue...</h1>
+	<h1>Update job...</h1>
 	<br/>
 	<form action="" method=POST enctype="multipart/form-data">
 		{% csrf_token %}
