--- a/events/templates/events/venue.html
+++ b/events/templates/events/venue.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 	
-	<h1>Venues...</h1>
+	<h1>Tasks</h1>
 <br/>
 <table class="table table-striped table-hover table-bordered">
 	{% for venue in venues %}
