--- a/events/templates/events/venue_events.html
+++ b/events/templates/events/venue_events.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 	
-<h1>List Events</h1>
+<h1>List jobs</h1>
 
 {% for event in events %}
  <a href="{% url 'show-event' event.id %}">{{ event}}</a><br/>
